<resources>
    <string name="app_name">Cellular Automata</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Cellular Automata</string>
    <string name="second_fragment_label">Simulation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="size_prompt">Size</string>
    <string name="generations_prompt">Generations</string>
    <string name="start_simulation_button">Start simulation</string>
    <string name="size_change">Size: %d</string>
    <string name="generations_change">Generations: %d</string>
    <string name="rule_change">Rule: %d</string>
    <string name="choose_simulation_parameters">Choose Simulation Parameters</string>
    <string name="rule_prompt">Rule</string>
</resources>
